fixed wrong background color

--- a/src/components/product/tag/ProductTag.module.scss
+++ b/src/components/product/tag/ProductTag.module.scss
@@ -60,6 +60,7 @@
 
   &:hover {
     color: var(--grey-500);
+    background-color: transparent;
     transform: translateY(-0.1rem);
   }
 
