--- a/src/containers/navbar/desktop/styles/Profile.module.scss
+++ b/src/containers/navbar/desktop/styles/Profile.module.scss
@@ -73,6 +73,11 @@
   }
 }
 
+.signOut {
+  color: var(--white) !important;
+  background-color: transparent !important;
+}
+
 //* 1088px (special)
 @media only screen and (min-width: 68em) {
   .signed {
