--- a/src/containers/navbar/mobile/styles/Navbar.module.scss
+++ b/src/containers/navbar/mobile/styles/Navbar.module.scss
@@ -102,6 +102,11 @@
   display: flex;
 }
 
+.signOut {
+  color: var(--white) !important;
+  background-color: transparent !important;
+}
+
 //* 368px
 @media only screen and (min-width: 23em) {
   .icons
